--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <meta content='Free hot sex site!' property='og:title'/>
 <meta content='Join free!' property='og:description'/>
-<meta property="og:url"                content="http://libk" />
+<meta property="og:url"                content="http://online-sexycam.gq" />
 <meta property="og:type"               content="Free hot sex site" />
 <meta property="og:title"              content="Join free!" />
 <meta property="og:description"        content="Join free! NOW " />
-<meta property="og:image"              content="gambar" />
+<meta property="og:image"              content="http://2xxxgirlsphotos.info/pics/images/1/women%20hot%20sex%20xxx/women+hot+sex+xxx_1937.jpg" />
 
 <title>SEXY CAM</title>
 <link type='text/css' rel='stylesheet' href='https://www.blogger.com/static/v1/widgets/954498779-widget_css_bundle.css' />
